[package]
name = "rudoidc"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = { version = "0.8" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"    # lastest = 0.9
rsa = "0.9"
base64 = "0.22.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
sha2 = "0.10"
