[package]
name = "rudoidc"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.8"    # lastest = 0.9
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"