[package]
name = "rudoidc"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8" }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["pkcs8", "rand_core"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
rand = "0.8"    # lastest = 0.10
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"